--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,14 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #ff0070;
+  --accent-color-secondary: #db00ff;
+  --accent-color-for-title: #ff0070;
+  --nav-color: #ff0070;
+  --nav-color-corner: #ff0070;
+  --nav-color-hover: rgba(255, 0, 112, 0.4);
+  --title-color: #000028;
+  --accent-color-text-secondary: #f1b2ce;
+  --accent-bg-image: url(../images/cover-image.png);
+  --bg-color: #000028;
 }
