--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,8 +8,9 @@
 
 body {
   min-inline-size: 375px;
-  max-inline-size: 1440px;
+  max-inline-size: 1024px;
   margin: 0 auto;
+  font-family: 'IBM Plex Mono', monospace;
 }
 
 h1,
