--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,331 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-image: var(--accent-bg-image);
+  background-color: var(--accent-bg-image);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.header {
+  height: 100vh;
+  min-height: 768px;
+  padding: 20px;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  align-items: center;
+  justify-items: end;
+  margin-bottom: 60px;
+  position: relative;
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--nav-color-corner);
+  border-right: 1px solid var(--nav-color-corner);
+}
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--nav-color-corner);
+  border-left: 1px solid var(--nav-color-corner);
+}
+
+.header__rec {
+  text-transform: uppercase;
+  font-size: var(--accent-size);
+  color: var(--nav-color);
+  position: absolute;
+  top: 20px;
+  right: 50px;
+  line-height: 25px;
+}
+
+.header__rec::after {
+  content: "";
+  position: absolute;
+  right: -20px;
+  top: 7px;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background-color: var(--nav-color);
+  box-shadow: 0 0 4px 2px var(--nav-color);
+}
+
+.header__theme-menu {
+  display: flex;
+  justify-self: center;
+  align-self: flex-start;
+}
+
+.header__theme-menu-list {
+  gap: 21px;
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+
+.header__theme-menu-button {
+  text-transform: lowercase;
+  font-size: var(--accent-size);
+  font-weight: var(--accent-font-weight);
+  line-height: var(--accent-size);
+  background-color: transparent;
+  border-color: transparent;
+  color: var(--accent-color-for-title);
+  border: 1px solid transparent;
+  padding: 2px 13px;
+  cursor: pointer;
+  appearance: none;
+  line-height: 1;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--nav-color);
+  pointer-events: none;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--nav-color-hover);
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--accent-color);
+}
+
+.header__title {
+  margin-left: -20px;
+  position: relative;
+  justify-self: start;
+  color: var(--accent-color-secondary);
+  line-height: 83%;
+  font-size: var(--title);
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+.header__content {
+  width: 50%;
+}
+
+.header__content-text {
+  line-height: var(--accent-line-height);
+  font-weight: var(--accent-font-weight-secondary);
+  font-size: var(--accent-size);
+}
+
+.title-decor {
+  background-color: var(--accent-color);
+  color: var(--title-color);
+}
+
+.main {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-bottom: 80px;
+}
+
+.section__info {
+  display: grid;
+  grid-template-columns: 315px 1fr;
+  gap: 19.93px;
+}
+
+.content__question-title {
+  color: var(--accent-color-for-title);
+  font-size: var(--accent-size);
+  font-weight: var(--accent-font-weight-secondary);
+  line-height: var(--accent-line-height);
+}
+
+.content__info-title {
+  margin-block-start: 20px;
+  margin-block-end: 10px;
+}
+
+.content__title-multi {
+  margin-block-end: 10px;
+}
+.content__title-width {
+  width: 300px;
+}
+
+.content__info-title_adviсe {
+  color: #000028;
+  font-weight: var(--accent-font-weight);
+  font-size: var(--accent-size);
+  line-height: var(--accent-line-height);
+  background-color: var(--accent-color);
+}
+
+.content__info-text {
+  font-weight: var(--accent-font-weight);
+  font-size: var(--accent-size);
+  line-height: var(--accent-line-height);
+  color: var(--accent-color-text-secondary);
+}
+
+.content__link {
+  cursor: pointer;
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.content__link:hover {
+  color: var(--accent-color-text);
+  border-bottom: 1px solid var(--accent-color-text-secondary);
+}
+
+.content__link:focus {
+  outline: none;
+}
+
+.content__link:focus-visible {
+  outline: 1px solid var(--accent-color-for-title);
+}
+
+.content__card-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.content__pictures-title {
+  margin-bottom: 20px;
+  font-weight: var(--accent-font-weight-secondary);
+  font-size: var(--accent-size);
+  line-height: var(--accent-line-height);
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.gallery__image {
+  width: 100%;
+  object-position: center;
+  object-fit: cover;
+  height: 100%;
+}
+
+.gallery__image:first-of-type {
+  grid-column: span 2;
+}
+
+.gallery__image:nth-of-type(2) {
+  grid-row: span 2;
+}
+
+.gallery__image:nth-of-type(3) {
+  grid-row: span 2;
+}
+
+.gallery__image:last-of-type {
+  grid-column: span 2;
+}
+
+.footer {
+  display: grid;
+  place-items: center;
+  block-size: 100vh;
+  min-height: 668px;
+  position: relative;
+  padding: 20px;
+}
+
+.footer__title {
+  font-weight: var(--accent-font-weight-secondary);
+  font-size: var(--title);
+  line-height: 83%;
+  color: var(--accent-color-secondary);
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+/* адаптив */
+@media (width <= 768px) {
+  .header__theme-menu {
+    display: flex;
+    justify-self: end;
+    align-self: center;
+  }
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+  }
+  .content__question-title {
+    width: 236px;
+  }
+  .content__card-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .section__content-gallery {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+@media (width <= 400px) {
+  .header {
+    margin-bottom: 20px;
+    padding: 10px 10px 20px 10px;
+  }
+  .main {
+    margin-bottom: 50px;
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  .header__theme-menu {
+    display: flex;
+    justify-self: end;
+    align-self: center;
+  }
+  .header__title {
+    font-size: 116px;
+    margin: 0;
+  }
+  .footer__title {
+    font-size: 116px;
+  }
+  .header__content {
+    width: 100%;
+  }
+  .section__info {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .content__card-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .section__content-gallery {
+    padding-right: 10px;
+    padding-left: 10px;
+    margin-bottom: 20px;
+  }
+  .gallery {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  .footer {
+    padding: 20px 10px 10px 10px;
+  }
 }
