--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@ body {
   min-inline-size: 375px;
   max-inline-size: 1024px;
   margin: 0 auto;
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: var(--accent-font-family);
 }
 
 h1,
