--- a/styles/light.css
+++ b/styles/light.css
@@ -10,28 +10,30 @@
     чем стили в медиазапросе предпочтений пользователя
   */
   --accent-color: #ff8dcb;
-  --accent-color-secondary: #ffc2e6;
+  --menu-button-focus-visible: #353430;
+  --accent-color-header-footer: #ffc2e6;
   --title-color: #353430;
   --nav-color-corner: #353430;
   --nav-color: transparent;
-  --nav-color-hover: #353430;
+  --nav-color-hover: #32312d66;
   --accent-color-for-title: #353430;
-  --accent-color-text-secondary: #353430;
-  --bg-color: #FFF1F7;
+  --accent-color-text: #353430;
+  --bg-color: #fff1f7;
   --accent-bg-image: url(../images/cover-image-light.png);
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    --bg-color: #FFF1F7;
+    --bg-color: #fff1f7;
+    --menu-button-focus-visible: #353430;
     --accent-color: #ff8dcb;
-    --accent-color-secondary: #ffc2e6;
+    --accent-color-header-footer: #ffc2e6;
     --title-color: #353430;
     --nav-color-corner: #353430;
     --nav-color: transparent;
-    --nav-color-hover: #353430;
+    --nav-color-hover: #32312d66;
     --accent-color-for-title: #353430;
-    --accent-color-text-secondary: #353430;
+    --accent-color-text: #353430;
     --accent-bg-image: url(../images/cover-image-light.png);
   }
 }
